[gd_scene load_steps=8 format=2]

[ext_resource path="res://render2.gd" type="Script" id=1]
[ext_resource path="res://render.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://render3.gd" type="Script" id=4]
[ext_resource path="res://main.gd" type="Script" id=5]
[ext_resource path="res://RobotoCondensed-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="root" type="Node2D"]
script = ExtResource( 5 )
wx = 10.0
wy = 10.0
phase = 1.571
lambda = 0.4
simulateuptoseconds = 20.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="render" type="Node2D" parent="."]
position = Vector2( 110, 110 )
script = ExtResource( 2 )

[node name="pathrender" type="Line2D" parent="render"]
width = 1.5
default_color = Color( 0.286275, 0.290196, 0.309804, 1 )

[node name="particle" type="Sprite" parent="render"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="trace" type="Line2D" parent="render"]
width = 2.2

[node name="render2" type="Node2D" parent="."]
position = Vector2( 220, 110 )
script = ExtResource( 1 )

[node name="pathrender" type="Line2D" parent="render2"]
width = 1.5
default_color = Color( 0.286275, 0.290196, 0.309804, 1 )

[node name="particle" type="Sprite" parent="render2"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="trace" type="Line2D" parent="render2"]
width = 2.2

[node name="render3" type="Node2D" parent="."]
position = Vector2( 110, 234 )
script = ExtResource( 4 )

[node name="pathrender" type="Line2D" parent="render3"]
width = 1.5
default_color = Color( 0.286275, 0.290196, 0.309804, 1 )

[node name="particle" type="Sprite" parent="render3"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="trace" type="Line2D" parent="render3"]
width = 2.2

[node name="ui" type="Control" parent="."]
margin_left = 281.0
margin_top = 294.0
margin_right = 321.0
margin_bottom = 334.0

[node name="container" type="VBoxContainer" parent="ui"]
margin_left = 1.0
margin_top = -26.0
margin_right = 198.0
margin_bottom = 299.0

[node name="RichTextLabel" type="RichTextLabel" parent="ui/container"]
margin_right = 197.0
margin_bottom = 15.0
custom_fonts/mono_font = SubResource( 1 )
text = "X wave amplitude (max 100) :"
fit_content_height = true

[node name="A" type="LineEdit" parent="ui/container"]
margin_top = 19.0
margin_right = 197.0
margin_bottom = 43.0
text = "100"

[node name="RichTextLabel2" type="RichTextLabel" parent="ui/container"]
margin_top = 47.0
margin_right = 197.0
margin_bottom = 62.0
custom_fonts/mono_font = SubResource( 1 )
text = "Y wave amplitude (max 100):"
fit_content_height = true

[node name="B" type="LineEdit" parent="ui/container"]
margin_top = 66.0
margin_right = 197.0
margin_bottom = 90.0
text = "100"

[node name="RichTextLabel3" type="RichTextLabel" parent="ui/container"]
margin_top = 94.0
margin_right = 197.0
margin_bottom = 109.0
custom_fonts/mono_font = SubResource( 1 )
text = "X wave frequency (max 15):"
fit_content_height = true

[node name="wx" type="LineEdit" parent="ui/container"]
margin_top = 113.0
margin_right = 197.0
margin_bottom = 137.0
text = "4"

[node name="RichTextLabel4" type="RichTextLabel" parent="ui/container"]
margin_top = 141.0
margin_right = 197.0
margin_bottom = 156.0
custom_fonts/mono_font = SubResource( 1 )
text = "Y wave frequency (max 15):"
fit_content_height = true

[node name="wy" type="LineEdit" parent="ui/container"]
margin_top = 160.0
margin_right = 197.0
margin_bottom = 184.0
text = "3"

[node name="RichTextLabel5" type="RichTextLabel" parent="ui/container"]
margin_top = 188.0
margin_right = 197.0
margin_bottom = 203.0
custom_fonts/mono_font = SubResource( 1 )
text = "Phase Difference:"
fit_content_height = true

[node name="phase" type="LineEdit" parent="ui/container"]
margin_top = 207.0
margin_right = 197.0
margin_bottom = 231.0
text = "0"

[node name="RichTextLabel6" type="RichTextLabel" parent="ui/container"]
margin_top = 235.0
margin_right = 197.0
margin_bottom = 250.0
custom_fonts/mono_font = SubResource( 1 )
text = "Dumping Constant (lambda)"
fit_content_height = true

[node name="dump" type="LineEdit" parent="ui/container"]
margin_top = 254.0
margin_right = 197.0
margin_bottom = 278.0
text = ".3"

[node name="RichTextLabel7" type="RichTextLabel" parent="ui/container"]
margin_top = 282.0
margin_right = 197.0
margin_bottom = 297.0
custom_fonts/mono_font = SubResource( 1 )
text = "Simultion upto (seconds):"
fit_content_height = true

[node name="sim" type="LineEdit" parent="ui/container"]
margin_top = 301.0
margin_right = 197.0
margin_bottom = 325.0
text = "30"

[node name="RichTextLabel" type="RichTextLabel" parent="ui"]
margin_left = -260.0
margin_top = 216.0
margin_right = -220.0
margin_bottom = 261.0
text = "X axis wave"
fit_content_height = true

[node name="RichTextLabel2" type="RichTextLabel" parent="ui"]
margin_left = 161.0
margin_top = -101.0
margin_right = 201.0
margin_bottom = -56.0
text = "Y axis wave"
fit_content_height = true

[connection signal="text_changed" from="ui/container/A" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="ui/container/B" to="." method="_on_B_text_changed"]
[connection signal="text_changed" from="ui/container/wx" to="." method="_on_wx_text_changed"]
[connection signal="text_changed" from="ui/container/wy" to="." method="_on_wy_text_changed"]
[connection signal="text_changed" from="ui/container/phase" to="." method="_on_phase_text_changed"]
[connection signal="text_changed" from="ui/container/dump" to="." method="_on_dump_text_changed"]
[connection signal="text_changed" from="ui/container/sim" to="." method="_on_sim_text_changed"]
